--- a/trunk/docs/CHANGES
+++ b/trunk/docs/CHANGES
@@ -3,6 +3,7 @@
     * Fix for special character display in tvwish
     * Fix issues with episode deletes in .25
     * Fix display of Recorded TV Programs - shows beginning with "The"
+    * Added mythepisode class and includes
 
 1.0.10
     * Fix to scheduled episode matching with (country) after the title
