--- a/wiki/Patches.wiki
+++ b/wiki/Patches.wiki
@@ -6,6 +6,7 @@
     * Fix for special character display in tvwish
     * Fix issue with episode deletes with mythtv .25
     * Fix display of Recorded TV Programs - shows beginning with "The"
+    * Added mythepisode class and includes
 
 *1.0.10*
     * Fix to scheduled episode matching with (country) after the title
