--- a/trunk/docs/CHANGES
+++ b/trunk/docs/CHANGES
@@ -4,6 +4,7 @@
     * Fix issues with episode deletes in .25
     * Fix display of Recorded TV Programs - shows beginning with "The"
     * Added mythepisode class and includes
+    * Updated tvwish display and ability to delete tvwish lists
 
 1.0.10
     * Fix to scheduled episode matching with (country) after the title
