--- a/wiki/Installation_Instructions.wiki
+++ b/wiki/Installation_Instructions.wiki
@@ -93,7 +93,7 @@ Step 4:
 -------
 Run the mythweb build_translation script.
 
-  * *cd /usr/share/mythtv/mythweb/modules/_shared/lang*
+  * *cd /usr/share/mythtv/mythweb/modules/\_shared/lang*
   * *./build_translation.pl*
 
 -------
